Fix model e título da view MarcaPecaInsumo #11

--- a/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<FrotaWeb.Models.MarcaPecaInsumoViewModel>
 
 @{
-    ViewData["Title"] = "Listagem de marcas, peças e insumos";
+    ViewData["Title"] = "Listagem de marcas das peças e insumos";
 }
 
-<h1>Listagem de marcas, peças e insumos</h1>
+<h1>Listagem de marcas das peças e insumos</h1>
 
 <p>
     <a asp-action="Create">Novo registro</a>
