Concolusão da implementação da classe PessoaController e das views. #4

--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model FrotaWeb.Models.PessoaModel
+﻿@model FrotaWeb.Models.PessoaViewModel
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
