--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FrotaWeb.Models.PessoaModel>
+﻿@model IEnumerable<FrotaWeb.Models.PessoaViewModel>
 
 <p>
     <a asp-action="Create">Create New</a>
