--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model FrotaWeb.Models.PessoaModel
+﻿@model FrotaWeb.Models.PessoaViewModel
 
 <div>
     <h4>PessoaModel</h4>
@@ -85,6 +85,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { /*id = Model.Id*/ }) |
     <a asp-action="Index">Back to List</a>
 </div>
