Correção de erro de compilação (LEIAM).
Por algum motivo que eu desconheço duas views de Fornecedor estão usando
o view model errado o que impossibilitava de compilar o projeto.

ATENÇÃO:
Uma das regras básicas ao trabalhar com repositórios ou em equipe é
verificar se ao menos está compilado na sua máquina, não é difícil
apertar o botão de compilar, se não compilar, resolva o erro, repita o
processo até compilar sem erros só ai então você envia para o restante
da equipe, assim o amiguinho não perde tempo resolvendo erros que não
criou (;

--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Delete.cshtml
@@ -1,4 +1,4 @@
-@model FrotaWeb.Models.PessoaViewModel
+@model FrotaWeb.Models.FornecedorViewModel
 
 @{
     ViewData["Title"] = "Deletar Fornecedor";
