Melhoria parcial da view de solicitação de manutenção. #30

--- a/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
@@ -1,3 +1,11 @@
+@import 'solicitacaomanutencao.css';
+
+:root {
+  --bg: #03438b;
+  --fg: #ffffff;
+  --grey: #c0c0c0;
+}
+
 html {
   font-size: 14px;
 }
