--- a/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
@@ -1,7 +1,34 @@
 @model FrotaWeb.Models.SolicitacaomanutencaoViewModel
 
-<h4>SolicitacaomanutencaoViewModel</h4>
-<hr />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<main>
+    <h4 class="page-title">
+        <span class="material-symbols-outlined">construction</span>
+        Solicitar Manutenção
+    </h4>
+    <h4 class='vehicle-name'>@Html.DisplayFor(model => model.IdVeiculo)</h4>
+    <form asp-action="Create" class='creator-form'>
+        <div class='top-fields'>
+            <div>
+                <label for="odometer">Leitura do odômetro</label>
+                <input name="odometer" type="number" id="odometer" placeholder="45.600">
+            </div>
+            <div>
+                <label for="date">Data</label>
+                <input name="date" type="date" id="date">
+            </div>
+        </div>
+        <div class="defect-field">
+            <h5>Defeito</h5>
+        </div>
+        <div class="buttons">
+            <input asp-action="Index" type="button" value="Voltar">
+            <input type="submit" value="Confirmar">
+        </div>
+    </form>
+</main>
+
+<!--
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -32,15 +59,11 @@
                 <span asp-validation-for="DescricaoProblema" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+-->
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
