--- a/Codigo/Frota/FrotaWeb/wwwroot/css/solicitacaomanutencao.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/solicitacaomanutencao.css
@@ -7,7 +7,6 @@
   padding: 15px;
   font-weight: bold;
   align-items: center;
-  justify-content: center;
   background-color: var(--bg);
 }
 
@@ -48,25 +47,94 @@
 }
 
 .defect-field {
+  display: flex;
   margin: 25px 0;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .defect-field > h5 {
+  margin-left: 15px;
   font-weight: bold;
+}
+
+.defect-field > button {
+  color: var(--fg);
+  border: none;
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: var(--bg);
 }
 
 .buttons {
   display: flex;
+  margin-top: 20px;
   justify-content: space-between;
 }
 
 .buttons > input {
   color: var(--fg);
   border: none;
-  padding: 20px 30px;
-  min-width: 100px;
+  padding: 15px 0px;
+  min-width: 200px;
   font-weight: bold;
   border-radius: 5px;
   background-color: var(--bg);
 }
 
+.middle-fields {
+  border: 1px solid var(--bg);
+  display: flex;
+  padding: 14px;
+  flex-direction: column;
+}
+
+.type-container {
+  display: flex;
+  border-radius: 5px;
+  flex-direction: column;
+}
+
+.type-container > select {
+  border: 1px solid var(--bg);
+  padding: 5px 10px;
+  max-width: 35%;
+  box-shadow: 0px 1px 2px var(--grey);
+  appearance: none;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: inherit;
+}
+
+.type-container > label {
+  position: relative;
+  max-width: 35%;
+}
+
+.type-container > label:after {
+  top: 115%;
+  right: 5px;
+  content: "\e7cd";
+  position: absolute;
+  font-size: 1.2em;
+  text-align: center;
+  font-family: "Material Symbols Outlined";
+  pointer-events: none;
+  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
+
+.desc-container {
+  display: flex;
+  margin-top: 15px;
+  flex-direction: column;
+}
+
+.desc-container > textarea {
+  border: 1px solid var(--bg);
+  resize: none;
+  border-radius: 5px;
+  min-height: 150px;
+}
