--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Create.cshtml
@@ -4,6 +4,55 @@
     ViewData["Title"] = "Create";
 }
 
+<div class="row"> 
+    <div>
+        <a asp-action="Index">Botão?</a>
+    </div>
+    <h3>ABT-(id)</h3>
+</div>
+
+
+<div class="row">
+    <img src="../img/FuelPump.svg" alt="abastecer" width="100px" height="100px">
+    <h4>Abastecer</h4>
+</div>
+
+
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Odometro" class="control-label"></label>
+                <input asp-for="Odometro" class="form-control" />
+                <span asp-validation-for="Odometro" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Litros" class="control-label"></label>
+                <input asp-for="Litros" class="form-control" />
+                <span asp-validation-for="Litros" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DataHora" class="control-label"></label>
+                <input asp-for="DataHora" class="form-control" />
+                <span asp-validation-for="DataHora" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Confirmar" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
+<!--
 <h1>Create</h1>
 
 <h4>AbastecimentoViewModel</h4>
@@ -43,6 +92,7 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+-->
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
