--- a/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
@@ -30,3 +30,20 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.my-button {
+  color: var(--fg);
+  border: none;
+  display: flex;
+  padding: 15px 0px;
+  min-width: 200px;
+  font-weight: bold;
+  align-items: center;
+  border-radius: 5px;
+  justify-content: center;
+  background-color: var(--bg);
+}
+
+.my-button > span {
+  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
