Está bonitão só não funciona. #30
Não aparece o nome do veículo, provavelmente não cria a solicitação
e o botão de voltar não volta, fora isso, está bonito afinal beleza
é tudo que importa na sociedade atual, o conteúdo não importa.

--- a/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
@@ -33,7 +33,9 @@
                 <label for="desc">Descrição</label>
                 <textarea name="desc" id="desc" placeholder="Pneu ultrapassou máximo de uso"></textarea>
             </div>
-            <button class="my-button"><span class="material-symbols-outlined">upload_file</span>Anexar arquivos</button>
+            <div class="upload-container">
+                <button class="my-button"><span class="material-symbols-outlined">upload_file</span>Anexar arquivos</button>
+            </div>
         </div>
         <div class="buttons">
             <input class="my-button" asp-action="Index" type="button" value="Voltar">
