--- a/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Details.cshtml
@@ -5,10 +5,8 @@
 }
 
 <h1>Detalhes da marca da peça e insumo</h1>
-
 <div>
     <h4>Marca da peça e insumo</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
@@ -24,7 +22,12 @@
         </dd>
     </dl>
 </div>
+
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    <a asp-action="Index">Back to List</a>
+    <a href="@Url.Action("Edit", new { id=Model.Id })" class="btn btn-primary" title="Edit">
+        Edit
+    </a>
+    <a href="@Url.Action("Index")" class="btn btn-primary" title="Index">
+        Back to list
+    </a>
 </div>
