--- a/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Edit.cshtml
@@ -7,7 +7,6 @@
 <h1>Alterar marca da peça e insumo</h1>
 
 <h4>Marca da peça e insumo</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -23,14 +22,16 @@
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary form-button" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href="@Url.Action("Index")" class="btn btn-primary form-button" title="Index">
+        Back to list
+    </a>
 </div>
 
 @section Scripts {
