--- a/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
@@ -11,7 +11,9 @@
         <div class="table-wrapper">
             <div class="table-title">
                 <div class="row">
-                    <div class="col-sm-8"><h2>Customer <b>Details</b></h2></div>
+                    <div class="col-sm-8">
+                        <h2>Marcas das peças e insumos</h2>
+                    </div>
                     <div class="col-sm-4">
                         <div class="search-box">
                             <i class="material-icons">&#xE8B6;</i>
