--- a/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 @import 'solicitacaomanutencao.css';
-@import 'component.css';
+@import 'component-table.css';
+@import 'marcapecainsumo.css';
 
 :root {
   --bg: #03438b;
