Adicionada a opção Modelo de Veiculo ao Layout principal. #2

--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MarcaPecaInsumo" asp-action="Index">Marca da peça e insumo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ModeloVeiculo" asp-action="Index">Modelos de Veiculo</a>
+                        </li>
 						<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pessoa" asp-action="Index">Pessoa</a>
                         </li>
