Adicionada nova opção ao layout utilizado para testes. #31

--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout_07104.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout_07104.cshtml
@@ -75,6 +75,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-car me-2"></i>Veiculos</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ModeloVeiculo" asp-action="Index"><i class="fa fa-car me-2"></i>Modelo de Veiculo</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Frota" asp-action="Index"><i class="fa fa-truck" aria-hidden="true"></i>Frota</a>
                         </li>
                         <li class="nav-item">
