Adicionado estilos aos botões de adicionar modelo de veiculo e voltar. #31

--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model FrotaWeb.Models.ModeloVeiculoViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar Modelo de Veiculo";
 }
 
-<h1>Create</h1>
+<h1>Adicionar</h1>
 
-<h4>ModeloVeiculoViewModel</h4>
+<h4>Modelo de Veiculo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,14 +33,14 @@
                 <span asp-validation-for="CapacidadeTanqueCombustivel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
 </div>
 
 @section Scripts {
