--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<FrotaWeb.Models.ModeloVeiculoViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cadastro de Modelo de Veiculo";
 }
 
-<h1>Index</h1>
+<h1>Veiculos Inseridos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Adicionar Novo</a>
 </p>
 <table class="table">
     <thead>
