Iniciada modificação do layout do componente table na view Index. #31

--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
@@ -9,7 +9,8 @@
 <p>
     <a asp-action="Create" class="btn btn-primary">Adicionar Novo</a>
 </p>
-<table class="table">
+<table class="table table-striped table-bordered" style="width:100%">
+    >
     <thead>
         <tr>
             <th>
