Agora o botão de voltar está funcionando, happy :) #30

--- a/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="buttons">
-            <input class="my-button" asp-action="Index" type="button" value="Voltar">
+            <input class="my-button" onclick="location.href = 'Index';" type="button" value="Voltar">
             <input class="my-button" type="submit" value="Confirmar">
         </div>
     </form>
