--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Create.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="CapacidadeTanqueCombustivel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" style="background-color:#08448c" />
             </div>
         </form>
     </div>
