--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Excluir modelo de Veiculo</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir?</h3>
 <div>
     <h4>ModeloVeiculoViewModel</h4>
     <hr />
@@ -39,6 +39,6 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Voltar</a>
     </form>
 </div>
