--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Atualizar Modelo de Veiculo </h1>
 
-<h4>ModeloVeiculoViewModel</h4>
+<h4>Atualiza as informações do modelo do veiculo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,14 +33,14 @@
                 <span asp-validation-for="CapacidadeTanqueCombustivel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" style="background-color:#08448c"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
 </div>
 
 @section Scripts {
