--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Cadastro de Modelo de Veiculos</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Adicionar Novo</a>
+    <a asp-action="Create" class="btn btn-primary" style="background-color:#08448c">Adicionar Novo</a>
 </p>
 <table class="table table-striped table-bordered" style="width:100%">
     
