Adicionado arquivo de layout principal e folha de estilos para as telas. #31

--- a/Codigo/Frota/FrotaWeb/Views/Shared/_LoginPartial.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_LoginPartial.cshtml
@@ -4,6 +4,8 @@
 @inject SignInManager<UsuarioIdentity> SignInManager
 @inject UserManager<UsuarioIdentity> UserManager
 
+
+
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
@@ -24,5 +26,14 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
+
+    <! -- Utilizar os comandos abaixo ao utilizar o layout_Final -->
+    <!--  <li class="nav-item">
+            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+             -->
 }
 </ul>
