--- a/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Index.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<FrotaWeb.Models.SolicitacaomanutencaoViewModel>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary" style="background-color:#08448c">Solicitar Manutenção</a>
 </p>
 <table class="table">
     <thead>
