--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Abastecimento</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary" style="background-color:#08448c">Novo Abastecimento</a>
 </p>
 <table class="table">
     <thead>
