--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,12 +1,32 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Redefinir Senha";
 }
+<head>
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
+    <style>
+    header {
+    display: none;
+    }
+
+    body {
+            background: linear-gradient(50deg, white 95%, #08448c 5%);
+    }
+
+    footer {
+    background-color: #08448c;
+    }
+
+
+    </style>
+
+</head>
+
+<p></p>
+<p></p>
+<h1>Informe seu email</h1>
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -16,7 +36,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary" style="background-color:#08448c"><i class="fa fa-lock me-2"></i>Redefinir senha</button>
         </form>
     </div>
 </div>
