--- a/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Peças e Insumos</h1>
 
 <p>
-    <a asp-action="Create "class="btn btn-primary" style="background-color:#08448c">Adicionar</a>
+    <a asp-action="Create"class="btn btn-primary" style="background-color:#08448c">Adicionar</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,17 @@
                 @Html.DisplayFor(modelItem => item.Descricao)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.Id})
+                    <a href="@Url.Action("Edit", new { id=item.Id })" class="edit" title="Editar" data-toggle="tooltip">
+                        <i class="fa fa-pencil" aria-hidden="true" style="color:#08448c"></i>
+                    </a>
+
+                    <a href="@Url.Action("Details", new { id=item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
+                        <i class="fa fa-eye" aria-hidden="true" style="color:#08448c"></i>
+                    </a>
+
+                    <a href="@Url.Action("Delete", new { id=item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
+                        <i class="fa fa-trash" aria-hidden="true" style="color:#08448c"></i>
+                    </a>
             </td>
         </tr>
 }
