Evolução de Layout, Adicionado a view de Fornecedor na rota do menu principal, adicionado o layout_final na view de inicialização, Adicionado mensagem de boas vindas na view Home, alteração do esquema de cores e icones para utilizadores logados. #31

--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout_final.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout_final.cshtml
@@ -85,7 +85,7 @@
                         <a class="nav-link" asp-area="" asp-controller="Frota" asp-action="Index"><i class="fa fa-truck mr-3"></i>Frota</a>
                     </li>
                     <li>
-                        <a class="nav-link" asp-area="" asp-controller="Frota" asp-action="Index"><i class="fa fa-pie-chart mr-3"></i>Fornecedor</a>
+                        <a class="nav-link" asp-area="" asp-controller="Fornecedor" asp-action="Index"><i class="fa fa-pie-chart mr-3"></i>Fornecedor</a>
                     </li>
                     <li>
                         <a class="nav-link" asp-area="" asp-controller="Frota" asp-action="Index"><i class="fa fa-line-chart mr-3"></i>Relatórios</a>
