--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
@@ -1,102 +1,125 @@
 ﻿@model IEnumerable<FrotaWeb.Models.FornecedorViewModel>
 
-@{
+    @{
     ViewData["Title"] = "Index";
-}
+    }
 
-<h1>Lista de Fornecedores</h1>
-
-<p>
-    <a asp-action="Create">Novo Registro</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cnpj)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cep)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Rua)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Bairro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Numero)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Complemento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cidade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Latitude)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Longitude)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
+    <head>
+        <link rel="stylesheet" href="~/css/Fornecedor/style_fornecedor_index.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    </head>
+    <body>
+        <header class="main_header">
+            <h1 class="section_title">Condutores</h1>
+            <a asp-action="Create"><i class="fas fa-plus"></i>Adicionar Fornecedor</a>
+        </header>
+        <main class="main_content container">
+            <div class="content">
+                <div class="style-tabela">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Id)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Nome)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Cnpj)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Cep)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Rua)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Bairro)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Numero)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Complemento)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Cidade)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Estado)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Latitude)
+                                </th>
+                                <th class="top center">
+                                    @Html.DisplayNameFor(model => model.Longitude)
+                                </th>
+                                <th class="top center">
+                                    Actions
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cnpj)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cep)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Rua)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Bairro)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Numero)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Complemento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cidade)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Estado)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Latitude)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Longitude)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>
-            </tr>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Id)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Nome)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Cnpj)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Cep)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Rua)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Bairro)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Numero)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Complemento)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Cidade)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Estado)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Latitude)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Longitude)
+                                </td>
+                                <td>
+                                    <button class="btn underline-bottom" id="b1">
+                                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                                    </button>
+                                    <button class="btn underline-bottom" id="b2">
+                                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                                    </button>
+                                    <button class="btn underline-bottom" id="b3">
+                                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                                    </button>
+                                </td>
+                            </tr>
         }
-    </tbody>
-</table>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="clear">
+                </div>
+            </div>
+        </main>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/js/Fornecedor/jscript_fornecedor_index.js"></script>
+    </body>
