Alterações na tela inicial.

--- a/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem vindo ao FrotaWeb!</h1>
+    <h1 class="display-4">Bem vindo ao FrotaPública!</h1>
 </div>
