--- a/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Solicitacaomanutencao/Create.cshtml
@@ -26,7 +26,10 @@
             <div class="type-container">
                 <label for="type">Tipo de Manutenção</label>
                 <select name="type" id="type" required>
-                    <option value="" disabled selected hidden>Troca de Pneu</option>
+                    <option value="" selected hidden>Selecione um tipo</option>
+                    <option value="pneu" class="text-dark">Troca de Pneu</option>
+                    <option value="oleo" class="text-dark">Troca de Óleo</option>
+                    <option value="freio" class="text-dark">Troca de Freio</option>
                 </select>
             </div>
             <div class="desc-container">
