--- a/Codigo/Frota/FrotaWeb/Views/_ViewStart.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/_ViewStart.cshtml
@@ -1,6 +1,3 @@
 ﻿@{
-    Layout = "_Layout_final";
+    Layout = "_Layout";
 }
-<!-- Testando outro Layout : _Layout_07104 --!>
-<!-- Testando outro Layout : _Layout_prototipos --!>
-
