--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
-	<header class="main_header">
-		<h1 class="section_title">Condutores</h1>
-		<a asp-action="Create"><i class="fas fa-plus"></i>Adicionar Condutor</a>
-	</header>
+	<h1 class="section_title">Condutores</h1>
+	<p>
+		<a asp-action="Create" class="btn btn-primary" style="background-color:#08448c">Adicionar Condutor</a>
+	</p>
 	<main class="main_content container">
 		<div class="content">
 			<div class="style-tabela">
