--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -6,66 +6,141 @@
     <title>@ViewData["Title"] - FrotaWeb</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/FrotaWeb.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FrotaWeb</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+    <div class="wrapper d-flex align-items-stretch">
+        <nav id="sidebar" class="active">
+            <div class="custom-menu">
+                <button type="button" id="sidebarCollapse" class="btn btn-primary">
+                    <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle Menu</span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <partial name="_LoginPartial" />    
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MarcaPecaInsumo" asp-action="Index">Marca da peça e insumo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ModeloVeiculo" asp-action="Index">Modelos de Veiculo</a>
-                        </li>
-						<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pessoa" asp-action="Index">Pessoa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Frota" asp-action="Index">Frota</a>
-                        </li>
-						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+            </div>
+            <div class="p-4">
+                <h1 class="fs-2"><a href="index.html" class="logo">FrotaPública</a></h1>
+
+
+                <ul class="list-unstyled components mb-5">
+                    <partial name="_LoginPartial" />
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                            <i class="fa fa-home mr-3"></i>Página Inicial
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Solicitacaomanutencao" asp-action="Index">
+                            <i class="fa fa-wrench mr-3"></i>Manutenção
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                            <i class="fa fa-briefcase mr-3"></i>Peças e Insumos
+                        </a>
+                        <ul class="collapse list-unstyled" id="homeSubmenu">
+                            <li>
+                                <a class="nav-link" asp-area="" asp-controller="PecaInsumo" asp-action="Index">
+                                    <i class="fa fa-cogs mr-3"></i>Peças
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" asp-area="" asp-controller="MarcaPecaInsumo" asp-action="Index">
+                                    <i class="fa fa-tag mr-3"></i>Marcas
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                            <i class="fa fa-car mr-3"></i>Veiculos
+                        </a>
+                        <ul class="collapse list-unstyled" id="pageSubmenu">
+                            <li>
+                                <a class="nav-link" asp-area="" asp-controller="Abastecimento" asp-action="Index">
+                                    <i class="fa fa-tachometer mr-3"></i>Abastecimento
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-tag mr-3"></i>Marcas de Veiculos</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" asp-area="" asp-controller="ModeloVeiculo" asp-action="Index">
+                                    <i class="fa fa-car mr-3"></i>Modelos de Veiculo
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" asp-area="" asp-controller="Veiculo" asp-action="Index">
+                                    <i class=" fa fa-bus mr-3"></i>Adicionar Veiculo
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Pessoa" asp-action="Index">
+                            <i class="fa fa-id-card mr-3"></i>Condutores
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Frota" asp-action="Index">
+                            <i class="fa fa-truck mr-3"></i>Frota
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Fornecedor" asp-action="Index">
+                            <i class="fa fa-pie-chart mr-3"></i>Fornecedor
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Frota" asp-action="Index">
+                            <i class="fa fa-line-chart mr-3"></i>Relatórios
+                        </a>
+                    </li>
+                </ul>
+                <div class="footer mt-auto">
+                    <button type="button" class="btn btn-danger btn-block" data-bs-toggle="modal" data-bs-target="#sairModal">
+                        <i class="fa fa-sign-out"></i> Sair
+                    </button>
                 </div>
             </div>
         </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - FrotaWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <!-- Page Content -->
+        <div id="content" class="p-4 p-md-5 pt-5">
+            <div class="container">
+                <main role="main" class="pb-3">
+                    @RenderBody()
+                </main>
+            </div>
         </div>
-    </footer>
+    </div>
+    <!-- Modal Sair -->
+    <div id="sairModal" class="modal fade" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="logoutModalLabel">FrotaWeb</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Você tem certeza de que deseja sair?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <form asp-area="Identity" asp-page="/Account/Login" method="post">
+                        <button type="submit" class="btn btn-danger">Sair</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+    <script src="~/js/home.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
